# minicloak

./: .gitignore  Dockerfile  README.md  docker-compose.yml  minicloak.py  pyproject.toml
templates/: create_user.html  edit_user.html  list_users.html
